# amby

./: .ghci  .travis.yml  LICENSE  README.md  amby.cabal  stack.yaml
app/: Main.hs
bench/: Bench.hs
example/: Tips.hs
src/: Amby.hs
src/Amby/: BoxPlot.hs  Categorical.hs  Container.hs  Display.hs  FactorPlot.hs  Numeric.hs  Plot.hs  Style.hs  Theme.hs  Types.hs  Util.hs
src/Amby/Compatibility/: HistogramNumeric.hs  HistogramPlot.hs
test/: Spec.hs
