name:                amby
version:             0.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/amby#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Amby
  other-modules:       Amby.Types
                     , Amby.Style
                     , Amby.Theme
                     , Amby.Numeric
                     , Amby.Plot
                     , Amby.Display
  build-depends:       base >= 4.7 && < 5
                     , data-default-class
                     , Chart-cairo
                     , Chart-diagrams
                     , Chart
                     , vector
                     , statistics
                     , microlens
                     , colour
                     , scientific
                     , mtl
                     , safe
                     , either
                     , pretty-display
                     , process
                     , exceptions
  default-language:    Haskell2010

executable amby-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amby
  default-language:    Haskell2010

test-suite amby-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amby
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/amby
